# verbose-parakeet

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  options.cpp  options.hpp
src/eval/: eval.cpp  pst.hpp
src/protocols/: uci.hpp
src/protocols/manual/: display.cpp  display.hpp  listen.cpp  listen.hpp  play.cpp  play.hpp
src/protocols/uci/: extensions.cpp  extensions.hpp  isready.cpp  listen.cpp  moves.cpp  position.cpp  search.cpp  setoption.cpp  uci.cpp  uci.hpp  ucinewgame.cpp
src/protocols/uci/extensions/: display.cpp  eval.cpp  perft.cpp  split.cpp
src/search/: alphabeta.cpp  controller.cpp  controller.hpp  pv.cpp  pv.hpp  score.hpp  search.cpp  search.hpp  stack.hpp
src/search/classic/: alphabeta.cpp  alphabeta.hpp  eval.cpp  eval.hpp  is_endgame.hpp  phase.hpp  pst.hpp  qsearch.cpp  qsearch.hpp  search.cpp  search.hpp  stack.hpp
src/search/classic/eval/: eval.cpp  eval.hpp  king_safety.hpp  phase.cpp  phase.hpp  pst.hpp
src/search/greedy/: eval.cpp  eval.hpp  search.cpp  search.hpp
src/search/random/: search.hpp
tests/: 50moves.cpp  mates.cpp  movetime.cpp  stalemate.cpp  uci.cpp  underpromote.cpp
tests/classic/: 50moves.cpp  mates.cpp  movetime.cpp  stalemate.cpp  underpromote.cpp
tests/greedy/: 50moves.cpp  mates.cpp  movetime.cpp  search.cpp  stalemate.cpp  underpromote.cpp
